Fix medium image pairing without cropping

--- a/src/stylesheets/components/_content.scss
+++ b/src/stylesheets/components/_content.scss
@@ -204,11 +204,6 @@
         left: -0.4rem;
         padding: 0 0.4rem;
 
-        img {
-          aspect-ratio: 1 / 1;
-          object-fit: cover;
-        }
-
         &.center {
           margin-left: auto;
           margin-right: auto;
@@ -216,7 +211,7 @@
       }
 
       &.medium + .medium {
-        margin-top: 0.8rem;
+        margin-top: 0;
       }
 
       &.large {
